[package]
name = "farm2"
version = "0.1.0"
edition = "2024"

[dependencies]
goblin = { version = "0.8", features = ["std", "mach32", "mach64"] }
anyhow = "1"
byteorder = "1"
capstone = { version = "0.13.0", features = ["full"] }
memmap2 = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
